--- a/forum/styles/make_style.css
+++ b/forum/styles/make_style.css
@@ -1270,9 +1270,6 @@ a {
 .post_options_container_closed {
     position: absolute;
     text-align: left;
-    padding: 5px;
-    background-color: #FFFFFF;
-    border: 1px solid #000000;
     display: none;
     overflow: scroll;
 }
@@ -1280,9 +1277,10 @@ a {
 .post_options_container_opened {
     position: absolute;
     text-align: left;
-    padding: 5px;
-    background-color: #FFFFFF;
-    border: 1px solid #000000;
     display: block;
     overflow: scroll;
+}
+
+.post_options_menu {
+   padding: 5px 10px 10px 5px;
 }
